table select view > limit columns to 100 characters and show expand button to expand the content + wrap td with white-space-pre when content is expanded to display content with white spaces and line breaks + null column values are no longer shown like strings but are shown as "NULL" in italic

--- a/ui/src/styles/base-elements.css
+++ b/ui/src/styles/base-elements.css
@@ -53,10 +53,6 @@ table :where(th, td) {
     padding: .2em .3em;
 }
 
-table tbody td {
-    white-space: pre;
-}
-
 nav {
     border-bottom: 1px solid var(--border-color);
     padding: 0.5rem;
